--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -77,8 +77,7 @@ p.caption {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
-}
+  max-width: 100%;}
 
 img.align-center {
   display: block;
@@ -905,6 +904,17 @@ input[type=number]:focus,
 [type=tel].form-control:focus,
 [contenteditable].form-control:focus {
   box-shadow: inset 0 -1px 0 #ddd;
+}
+
+table.doc-index.docutils.align-default {
+    line-height: .5rem;
+    border-collapse: separate;
+    border-spacing: 0 .6rem;
+}
+
+.longtable.docutils p {
+    margin-top: .2rem;
+    margin-bottom: .2rem;
 }
 
 div#sidebar-gallery {
