--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -3,18 +3,37 @@ html {
   background: url("bg.png") repeat fixed;
 }
 
+html, body {
+  height: 100%;
+}
+
 ul {
   padding-left: 10px;
 }
 
-.container {
+.container-fluid {
   padding-left: 30px;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
   padding-right: 30px;
   width: auto;
-  max-width: 1200px;
   box-shadow: 2px 0 10px #aaa, -2px 0 10px #aaa;
   -moz-box-shadow: 2px 0 10px #aaa, -2px 0 10px #aaa;
   -webkit-box-shadow: 2px 0 10px #aaa, -2px 0 10px #aaa;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+@media (min-width:1025px) {
+  .container-fluid {
+    width: 75% !important;
+  }
+}
+
+.row {
+  flex-grow: 1;
 }
 
 body {
@@ -77,7 +96,8 @@ p.caption {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;}
+  max-width: 100%;
+}
 
 img.align-center {
   display: block;
@@ -104,34 +124,34 @@ img.align-center {
 }
 
 .carousel-caption h5 {
-    color: #fff;
-    font-size: 18px;
+  color: #fff;
+  font-size: 18px;
 }
 
 .carousel-caption h6 {
-    color: #fff;
+  color: #fff;
 }
 
 .carousel-caption {
-    color: #e9ecef;
-    background: #002b36;
-    line-height: 1.5;
-    font-size: 17px;
-    width: 100%;
-    margin-top: -10px;
-    position: relative;
-    padding: 5px;
-    opacity: 90%;
-    bottom: 0px;
-    left: 0px;
+  color: #e9ecef;
+  background: #002b36;
+  line-height: 1.5;
+  font-size: 17px;
+  width: 100%;
+  margin-top: -10px;
+  position: relative;
+  padding: 5px;
+  opacity: 90%;
+  bottom: 0px;
+  left: 0px;
 }
 
 .carousel-control-next-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
 .carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
 }
 
 .carousel-inner img {
@@ -733,8 +753,8 @@ dl.class dt, dl.function dt {
 }
 
 dl.field-list p {
-    margin-top: 0;
-    margin-bottom: .2rem;
+  margin-top: 0;
+  margin-bottom: .2rem;
 }
 
 .docutils.field-list td blockquote p {
@@ -840,16 +860,16 @@ div#sidebar.sticky-top {
 }
 
 .card-header {
-    padding: .5rem 1rem;
+  padding: .5rem 1rem;
 }
 
 .page-link {
-    display: inline;
-    color: #337AB7;
+  display: inline;
+  color: #337AB7;
 }
 
 .page-link:hover {
-    color: #107896;
+  color: #107896;
 }
 
 /* NAVIGATION */
@@ -857,14 +877,17 @@ div#sidebar.sticky-top {
   list-style: none;
   text-align: center;
 }
+
 .navbar ul li {
   display: inline-block;
 }
+
 .navbar ul li a {
   display: block;
   text-decoration: none;
   margin: 0 10px;
 }
+
 .navbar ul li a,
 .navbar ul li a:after,
 .navbar ul li a:before {
@@ -875,6 +898,7 @@ div#sidebar.sticky-top {
 .navbar ul li a {
   position: relative;
 }
+
 .navbar ul li a:after {
   position: absolute;
   bottom: 0;
@@ -887,6 +911,7 @@ div#sidebar.sticky-top {
   background: #aaa;
   height: 1px;
 }
+
 .navbar ul li a:hover:after {
   width: 100%;
 }
@@ -913,12 +938,12 @@ div#sidebar.sticky-top {
 }
 
 form.form-inline.my-2.my-lg-0 {
-    margin-top: .5rem !important;
-    margin-bottom: -.5rem !important;
+  margin-top: .5rem !important;
+  margin-bottom: -.5rem !important;
 }
 
 .navbar {
-    padding: 0rem .5rem;
+  padding: 0rem .5rem;
 }
 
 textarea:focus,
@@ -937,19 +962,19 @@ input[type=number]:focus,
 }
 
 table.doc-index.docutils.align-default {
-    line-height: .5rem;
-    border-collapse: separate;
-    border-spacing: 0 .6rem;
+  line-height: .5rem;
+  border-collapse: separate;
+  border-spacing: 0 .6rem;
 }
 
 .longtable.docutils p {
-    margin-top: .2rem;
-    margin-bottom: .2rem;
+  margin-top: .2rem;
+  margin-bottom: .2rem;
 }
 
 div#sidebar-gallery.card-body {
-    background: #fff;
-    padding: 0;
+  background: #fff;
+  padding: 0;
 }
 
 .jumbotron {
@@ -957,20 +982,22 @@ div#sidebar-gallery.card-body {
 }
 
 .display-4 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .card-footer {
-    font-size: 1.06rem;
+  font-size: 1.06rem;
 }
 
 .navbar-nav {
-    color: rgba(0, 0, 0, .7);
+  color: rgba(0, 0, 0, .7);
 }
 
 :target::before {
   content: "";
   display: block;
-  height: 54px; /* fixed header height*/
-  margin: -54px 0 0; /* negative fixed header height */
+  height: 54px;
+  /* fixed header height*/
+  margin: -54px 0 0;
+  /* negative fixed header height */
 }
