Small tweak for donwload button display

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -483,6 +483,7 @@ blockquote.sphx-glr-script-out {
 
 div.sphx-glr-footer {
   text-align: center;
+  display: flex;
 }
 
 .sphx-glr-footer.container {
