Fix search functionality and highlight search term on resulting page

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -1012,3 +1012,11 @@ div#sidebar-gallery.card-body {
   margin: -54px 0 0;
   /* negative fixed header height */
 }
+
+dt:target, span.highlighted {
+    background-color: #fbe54e;
+}
+
+rect.highlighted {
+    fill: #fbe54e;
+}
