Add core back to API documentation

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -1055,3 +1055,7 @@ div.dataTables_wrapper div.dataTables_filter {
     padding: 0;
     background-color: #fbe54e;
 }
+
+table#publications {
+    font-size: 14px;
+}
