--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -202,7 +202,7 @@ h6 {
 table {
   border-collapse: collapse;
   margin: 0 0 0 0;
-  /* border: 0px; */
+  border: 0px;
 }
 
 /*table in doc/index.html*/
@@ -255,7 +255,10 @@ pre, code {
   font-family: "Inconsolata", monospace;
   font-size: 15px;
   margin-top: 10px;
-  padding: 7px;
+  padding: 7px
+}
+
+pre {
   border: 1px solid #c9c9c9;
   box-shadow: 1px 1px 1px #d8d8d8;
 }
